[project]
name = "hzl-agentic-ai"
version = "0.1.0"
description = "Agentic AI layer for HZL PO/Contract extraction and discrepancy validation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=2.44.0",
    "pydantic>=2.11.9,<2.13",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "reportlab>=5.0.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
serve = "hzl_agentic_ai.main:run"

[tool.vercel]
entrypoint = "src.hzl_agentic_ai.api:app"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
